2003-12-18 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* support/Util/SDCCerr.h,
	* support/Util/SDCCerr.c (E_NOT_ALLOWED),
	* src/SDCC.y (struct_declaration, struct_or_union_specifier): complain
	about storage class and 'at' used inside struct or union
	* src/SDCCBBlock.c (iCodeFromeBBlock),
	* src/SDCCcse.c (ifxOptimize),
	* src/SDCCglue.c (emitRegularMap, initPointer, printIvalStruct,
	printIvalArray, printiValFuncPtr, printIvalCharPtr, printIvalPtr,
	printIval, emitStaticSeg, emitOverlay),
	* src/SDCClabel.c (deleteIfx),
	* src/SDCCopt.c (replaceRegEqv, eBBlockFromiCode),
	* src/SDCCast.c (resolveSymbols, createIvalStruct, createIvalArray,
	gatherAutoInit, processParms),
	* support/Util/SDCCerr.h,
	* support/Util/SDCCerr.c (werrorfl): Support for better error location
	reporting for post-parse errors.

2003-12-16 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCval.c (valPlus, valMinus, valShift): fixed some problems with
	implicit casts via union; they don't work on big endian systems
	(possible fix for bug #861138)

2003-12-16 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	(committed by Erik Petrich <epetrich@ivorytower.norman.ok.us> on Frieder's behalf)
	* src/mcs51/main.c: fixed the fix for bug #737001

2003-12-15  Borut Razem <borut.razem@siol.net>

	* support/scripts/sdcc.nsi: updated for NSIS 2.0 beta 4

2003-12-14 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* support/makebin/makebin.c: put output in binary mode

2003-12-13 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/main.c: fixed bug #737001 for the mcs51. SDCC clears 
	xdata and data memory on startup. Set the environment variable 
	SDCC_NOGENRAMCLEAR to disable this.
	* src/mcs51/peephole.def,
	* src/ds390/peephole.def: using the atomic test and clear instruction jbc
	(allows non-interrupt and interrupt code to safely compete for a resource
	without the non-interrupt code having to disable interrupts)

2003-12-13 Erik Petrich <epetrich@ivorytower.norman.ok.us>
